# veridion

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
docs/: README.md
docs/advisories/: accepted.md  resolved.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: approvals.md  audit-logging.md  observability.md  risk-scoring.md  writing-policies.md
docs/internals/: architecture.md
docs/reference/: cli.md  library-api.md  policy-language.md
docs/testing/: running-tests.md
examples/: jarvis_integration.rs
src/: action.rs  approval.rs  audit.rs  config.rs  decision.rs  engine.rs  filters.rs  firewall.rs  lib.rs  main.rs  policy.rs  risk.rs  server.rs  storage.rs  telemetry.rs  upstream.rs
tests/: authorization.rs  proxy.rs
