[package]
name = "veridion"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1"
globset = "0.4"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"
