[package]
name = "veridion"
version = "0.1.0"
edition = "2024"

[lib]
name = "veridion"
path = "src/lib.rs"

[[bin]]
name = "veridion"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1"
globset = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
